proofreading and add something about --cpuset-cpus=2